# AI-Alert

./: .editorconfig  .gitignore  .prettierrc.json  README.md  docker-compose.yml  pyproject.toml
infrastructure/: deploy.sh
infrastructure/prod/: docker-compose.yaml
research/: baseVSsmall.txt  broadcastify.http  split_silence.py  text_archive.txt
src/caddy/: Caddyfile  Dockerfile
src/client/: .env.development
src/client/app/auth/login/: page.tsx
src/client/components/mobile-nav-menu/: index.tsx
src/client/components/navmenu/: index.tsx
src/client/services/: auth.ts
src/server/: Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  requirements.txt  schema.yml
src/server/ai_alerting/: asgi.py  settings.py  urls.py  wsgi.py
src/server/apps/feeds/: admin.py  models.py
src/server/apps/feeds/migrations/: 0001_initial.py  0002_alter_location_county_feed.py  0003_feedaudio_feed_audio.py
src/server/apps/users/: admin.py  models.py  urls.py  views.py
src/server/apps/users/api/: serializers.py
src/server/apps/users/migrations/: 0001_initial.py  0002_usertype_user_user_type.py  0003_user_stripe_id.py
